src/tests/snapshots/niri__tests__window_opening__check_target_size@ofT-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open floating: true\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 0 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 0 × 0, bounds: 1280 × 720, states: []
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
